fix z-index roster

--- a/scss/_oc.scss
+++ b/scss/_oc.scss
@@ -1,5 +1,6 @@
 #jsxc_roster {
    top: 45px;
+   z-index: 160;
    background-color: #383C43;
 }
 
